--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,8 +15,16 @@
             </p>
         </mat-card-content>
         <mat-card-actions fxLayout="row wrap" fxLayoutAlign="center start">
-            <button mat-button>LIKE</button>
-            <button mat-button>SHARE</button>
+            <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example home icon">
+                    star_outline
+                </mat-icon>
+            </button>
+            <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example home icon">
+                    share
+                </mat-icon>
+            </button>
         </mat-card-actions>
     </mat-card>
 </section>
