--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,16 @@
 <h2 [ngStyle.xs]="{'textAlign': 'center'}">title</h2>
-<section dir="ltr" fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="start start" fxLayoutAlign.xs="center center" fxLayoutGap="15px">
-    <mat-card class="example-card" [ngStyle.xs]="{'margin.px': 20}" fxFlex="23" *ngFor="let item of [1,2,2,2,2,2,2,2,5]">
+<section dir="ltr" [ngStyle.xs]="{'margin.px': 10}" fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="start start" fxLayoutAlign.xs="center center" fxLayoutGap="15px">
+    <mat-card color="secondary" class="example-card"  fxFlex="23" *ngFor="let item of list">
         <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Shiba Inu</mat-card-title>
+            <div mat-card-avatar class="example-header-image">
+                <img [src]="item.imgUrl.profile">
+            </div>
+            <mat-card-title>{{item.name | uppercase}}</mat-card-title>
             <mat-card-subtitle>Dog Breed</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <div class="main-img" mat-card-image>
+            <img mat-card-image [src]="item.imgUrl.main" alt="Photo of a Shiba Inu">
+        </div>
         <mat-card-content>
             <p>
             The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
