--- a/src/app/pages/sidebar/sidebar.component.html
+++ b/src/app/pages/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
 	  <mat-nav-list  class="nav-list">
         <div class="menu-item" fxLayout="column" fxLayoutAlign="center center">
             <a fxLayoutAlign="center center" mat-list-item routerLinkActive="selected" [routerLink]="'menuItem'"
-                *ngFor="let menuItem of [1]; let i = index;">
+                *ngFor="let menuItem of ['Todos']; let i = index;">
                 
                 <span class="iconify {{menuItem}} icon" ></span>
                 <span >
