--- a/src/_palleta.scss
+++ b/src/_palleta.scss
@@ -1,1 +1,112 @@
+/* For use in src/lib/core/theming/_palette.scss */
+/* For use in src/lib/core/theming/_palette.scss */
+$md-pokewarn: (
+    50 : #fce7e0,
+    100 : #f9c2b3,
+    200 : #f59a80,
+    300 : #f0714d,
+    400 : #ed5226,
+    500 : #ea3400,
+    600 : #e72f00,
+    700 : #e42700,
+    800 : #e12100,
+    900 : #db1500,
+    A100 : #ffffff,
+    A200 : #ffd2cf,
+    A400 : #ffa19c,
+    A700 : #ff8983,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+
+
+/* For use in src/lib/core/theming/_palette.scss */
+/* For use in src/lib/core/theming/_palette.scss */
+/* For use in src/lib/core/theming/_palette.scss */
+$md-pokesecondary: (
+    50 : #fbfbe1,
+    100 : #f5f6b5,
+    200 : #eff084,
+    300 : #e8ea52,
+    400 : #e3e62d,
+    500 : #dee108,
+    600 : #dadd07,
+    700 : #d5d906,
+    800 : #d1d504,
+    900 : #c8cd02,
+    A100 : #fffff5,
+    A200 : #fdffc2,
+    A400 : #fcff8f,
+    A700 : #fcff75,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #000000,
+        900 : #000000,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+
+
+
+/* For use in src/lib/core/theming/_palette.scss */
+$md-pokeprimary: (
+    50 : #e1ecf6,
+    100 : #b4d0e9,
+    200 : #82b1db,
+    300 : #5091cc,
+    400 : #2b7ac1,
+    500 : #0562b6,
+    600 : #045aaf,
+    700 : #0450a6,
+    800 : #03469e,
+    900 : #01348e,
+    A100 : #baceff,
+    A200 : #87aaff,
+    A400 : #5485ff,
+    A700 : #3b73ff,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #ffffff,
+    )
+);
+
+
 $bg-color: rgb(216, 229, 240);
