--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -8,7 +8,6 @@
       
       background-color: $bg-color;
       padding: 10px;
-      margin-bottom: 10px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -19,10 +18,11 @@
       }
       
     }
-
+    
     .main-img{
+      padding: 10px;
       background-color: $bg-color;
       margin-bottom: 10px;
     }
+
   }
-  
