--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -18,6 +18,9 @@
       }
       
     }
+    .pk-name{
+      font-size: clamp(1rem, 1rem + 10vw, 2rem);
+    }
     
     .main-img{
       padding: 10px;
